--- a/COVID-19/Dashboard.html
+++ b/COVID-19/Dashboard.html
@@ -23,6 +23,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5PH6D86"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-  
+
+<button type="button" onclick="alert('Hello world!')">Click!</button>
+    
   </body>
 </html>
