--- a/COVID-19/Dashboard.html
+++ b/COVID-19/Dashboard.html
@@ -3,7 +3,7 @@
   <head>
     
     <title>COVID-19 Dashboard</title>
-
+<button type="button" onclick="alert('Hello world!')">Click Here!</button>
 
  <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
