--- a/COVID-19/Dashboard.html
+++ b/COVID-19/Dashboard.html
@@ -88,3 +88,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
   </body>
 </html>
+
+
+
+
+<main class="container-lg pt-3">
+    <h1>Choose your role:</h1>
+    <form id="profile-form" action="/">
+        <div class="form-group">
+            <label for="exampleInputEmail1">Job Function</label>
+            <select class="form-control" id="job-function" name="job-function">
+                <option selected disabled>Choose One</option>
+                <option value="business_owner">Business Owner</option>
+                <option value="developer">Developer</option>
+                <option value="marketer">Marketer</option>
+                <option value="other">Other</option>
+            </select>
+            <small>This example shows how to set user properties in Google Analytics.</small>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</main>
